--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="l">
     <link rel="stylesheet" href="asset/css/style.css">
     <script src="https://kit.fontawesome.com/175fa63f91.js" crossorigin="anonymous"></script>
     <title>LA MANU-CROISIÈRE</title>
